# lenghel-bot

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  config.json
src/: config.rs  main.rs
src/api/: youtube.rs
src/bot/: handler.rs
src/bot/commands/: lenghel_gif.rs  lenghel_rate.rs  mod.rs  respond.rs  slash_commands.rs  subscribe.rs  unsubscribe.rs
src/db/: mod.rs  subscriber_storage.rs  threadsafe_storage.rs
src/model/: channel.rs  gifs.rs  mod.rs  video.rs
src/utils/: discord.rs  messaging.rs  mod.rs
