[package]
name = "lenghel-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
shuttle-persist = "0.48.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serenity = "0.12.2"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "full"] }
chrono = "0.4"
rand = "0.8"
cron = "0.12.1"
