[package]
name = "lenghel-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
shuttle-persist = "0.48.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serenity = "0.12.2"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "full"] }
chrono = "0.4"
rand = "0.8"
cron = "0.13.0"
